Running cypress tests on this PR

--- a/.github/workflows/cypress-altinn-app-frontend.yml
+++ b/.github/workflows/cypress-altinn-app-frontend.yml
@@ -7,12 +7,14 @@ on:
       - 'src/altinn-app-frontend/**'
       - 'src/shared/**'
       - 'test/cypress/**'
+      - '.github/workflows/cypress-altinn-app-frontend.yml'
   pull_request:
     branches: [main]
     paths:
       - 'src/altinn-app-frontend/**'
       - 'src/shared/**'
       - 'test/cypress/**'
+      - '.github/workflows/cypress-altinn-app-frontend.yml'
 
   workflow_dispatch:
 
