chore: treat 0.x.x versions as major changes, so they are not grouped together in the same PR as other minor and patch dependency upgrades

--- a/renovate.json
+++ b/renovate.json
@@ -5,13 +5,9 @@
   ],
   "packageRules": [
     {
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
+      "matchCurrentVersion": ">=1.0.0",
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch"
     }
