--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base", "schedule:earlyMondays"],
   "packageRules": [
     {
       "matchCurrentVersion": ">=1.0.0",
