--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -70,6 +70,7 @@
     "fork-ts-checker-notifier-webpack-plugin": "6.0.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "html-react-parser": "3.0.4",
+    "identity-obj-proxy": "3.0.0",
     "jest": "29.0.3",
     "jest-environment-jsdom": "29.0.3",
     "jest-junit": "14.0.1",
@@ -102,7 +103,7 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(css|less|scss)$": "identity-obj-proxy",
       "\\./applicationMetadataMock.json": "<rootDir>/__mocks__/applicationMetadataMock.json",
       "^altinn-shared/(.*)$": "<rootDir>/../shared/src/$1",
       "^src/(.*)$": "<rootDir>/src/$1",
