--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -39,6 +39,7 @@
     "react-number-format": "4.9.4",
     "react-redux": "8.0.2",
     "react-router-dom": "6.4.0",
+    "react-select": "^5.4.0",
     "redux": "4.2.0",
     "redux-saga": "1.2.1",
     "reselect": "4.1.6",
