--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,6 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         machines: [1, 2, 3]
+    name: Internal
 
     steps:
       - name: Checkout
@@ -83,6 +84,7 @@ jobs:
      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
 
     runs-on: ubuntu-latest
+    name: External
 
     steps:
       - name: Checkout
