--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,4 +1,4 @@
-name: Run unit tests
+name: Tests
 on:
   push:
     branches:
@@ -7,9 +7,9 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  unit-tests:
     runs-on: ubuntu-latest
-    name: Unit tests
+    name: Type-checks, eslint, unit tests and SonarCloud
     steps:
       - name: checkout
         uses: actions/checkout@v3
