--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -84,6 +84,7 @@
     "react-styleguidist": "12.0.0",
     "redux-mock-store": "1.5.4",
     "redux-saga-test-plan": "4.0.6",
+    "resize-observer-polyfill": "1.5.1",
     "rimraf": "3.0.2",
     "source-map-loader": "4.0.0",
     "style-loader": "3.3.1",
