--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -20,7 +20,7 @@
   "author": "Altinn",
   "license": "3-Clause BSD",
   "dependencies": {
-    "@altinn/altinn-design-system": "0.7.1",
+    "@altinn/altinn-design-system": "C:\\Users\\joli\\Altinn-forked-repo\\altinn-design-system\\package2.tgz",
     "@babel/polyfill": "7.12.1",
     "@date-io/moment": "1.3.13",
     "@material-ui/core": "4.12.4",
