Limiting unit tests to run when there are changes in src/ (so they won't run whenever there are changes to schemas, for example)

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -4,17 +4,15 @@ on:
   push:
     branches: [main]
     paths:
-      - 'src/altinn-app-frontend/**'
-      - 'src/shared/**'
+      - 'src/**'
       - 'test/cypress/**'
-      - '.github/workflows/cypress-altinn-app-frontend.yml'
+      - '.github/workflows/cypress.yml'
   pull_request:
     branches: [main]
     paths:
-      - 'src/altinn-app-frontend/**'
-      - 'src/shared/**'
+      - 'src/**'
       - 'test/cypress/**'
-      - '.github/workflows/cypress-altinn-app-frontend.yml'
+      - '.github/workflows/cypress.yml'
 
   workflow_dispatch:
 
