Disabling some SonarCloud rules

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,16 @@ sonar.sources=src
 sonar.exclusions=**/webpack.config.*.js,**/node_modules,**/dist,**/*.test.ts*,**/setupTests.ts,**/__mocks__/**,src/types/**,src/shared/src/language/texts/**
 
 sonar.javascript.lcov.reportPaths=src/altinn-app-frontend/coverage/lcov.info,src/shared/coverage/lcov.info
+
+# Ignore a few rules
+sonar.issue.ignore.multicriteria=e1,e2
+
+# Cognitive Complexity of functions should not be too high
+# Ignored because we decided not to have a hard complexity limit, as we trust our developers to manage complexity
+sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S3776
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.*
+
+# Redundant casts and non-null assertions should be avoided
+# Ignored because this rule is faulty, and removing 'redundant' casts may in some cases give hard TS-errors
+sonar.issue.ignore.multicriteria.e2.ruleKey=typescript:S4325
+sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.*
