Hopefully improving the PR template (although with a lot more tasks). Also removing the task to check if you code builds clean - that will be tested automatically

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -14,10 +14,10 @@ changelog:
         - kind/bug
     - title: Other Changes
       labels:
-        - "*"
-      exclude:
-        labels:
-          - kind/dependencies
+        - kind/other
     - title: Dependency Upgrades 📦
       labels:
         - kind/dependencies
+    - title: Uncategorized changes
+      labels:
+        - "*"
