--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -13,9 +13,7 @@
     "tsc": "tsc",
     "tsc:watch": "tsc --watch",
     "clean": "rimraf dist compiled",
-    "webpack-watch": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress",
-    "styleguidist:run": "yarn dlx styleguidist server",
-    "styleguidist:build": "yarn dlx styleguidist build"
+    "webpack-watch": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress"
   },
   "author": "Altinn",
   "license": "3-Clause BSD",
@@ -81,7 +79,6 @@
     "mini-css-extract-plugin": "2.6.1",
     "react-refresh": "0.14.0",
     "react-refresh-typescript": "2.0.7",
-    "react-styleguidist": "13.0.0",
     "redux-mock-store": "1.5.4",
     "redux-saga-test-plan": "4.0.6",
     "resize-observer-polyfill": "1.5.1",
