--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -4,9 +4,7 @@
   "author": "Altinn",
   "license": "3-Clause BSD",
   "scripts": {
-    "test": "jest",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "4.12.4",
@@ -33,9 +31,7 @@
     "jest-junit": "14.0.1",
     "jsdom": "20.0.2",
     "react": "18.2.0",
-    "react-docgen-typescript": "1.22.0",
     "react-dom": "18.2.0",
-    "react-styleguidist": "13.0.0",
     "ts-jest": "29.0.3"
   },
   "jest": {
