--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   add-to-project:
-    name: Add issue to project
+    name: Add issue to Team-Apps project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@RELEASE_VERSION
+      - uses: actions/add-to-project@main
         with:
           project-url: https://github.com/orgs/Altinn/projects/39
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
